src/test/ui/type-alias-impl-trait/issue-68368-non-defining-use-2.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/issue-68368-non-defining-use-2.rs:9:29
   |
LL | fn f<'a>() -> Alias<'a, ()> {}
   |                             ^^
   |
note: used non-generic type `()` for generic parameter
  --> $DIR/issue-68368-non-defining-use-2.rs:7:16
   |
LL | type Alias<'a, U> = impl Trait<U>;
   |                ^

error: unconstrained opaque type
  --> $DIR/issue-68368-non-defining-use-2.rs:7:21
   |
LL | type Alias<'a, U> = impl Trait<U>;
   |                     ^^^^^^^^^^^^^
   |
   = note: `Alias` must be used in combination with a concrete type within the same module

error: aborting due to 2 previous errors

